--- a/resources/assets/styles/theme.scss
+++ b/resources/assets/styles/theme.scss
@@ -72,17 +72,31 @@ body {
     &.open {
         display: block;
         width: 100%;
-        min-height: 100vh;
         padding: 4rem 0 2rem;
         z-index: 5;
-        background-color: $primary;
-        padding: 2rem;
+        background-color: rgba(255,111,116,.9);
+        padding: 10rem 2rem 2rem;
         color: #FFF;
-        position: fixed;
 
-        ul.navbar-nav li a {
-            font-size: 1.2em;
-            color: #FFF;
+        ul.navbar-nav {
+            
+            li {
+                a {
+                    font-size: 1.2em;
+                    color: #FFF;
+                }
+
+                .dropdown-menu {
+                    border-radius: 4px;
+                    background-color: $navy;
+                    box-shadow: inset 0 0 5px rgba(0,0,0,.2);
+        
+                    a {
+                        font-size: 1em;
+                        color: #FFF;
+                    }
+                }
+            }
         }
     }
 }
@@ -91,17 +105,33 @@ body {
     transition: all .5s linear;
     position: relative;
     z-index: 6;
-    position: fixed;
+    position: absolute;
     width: 100%;
 
+    @media (min-width: 768px){
+        position: fixed;
+    }
+
+    .logo img {
+        width: 250px;
+
+        @media (min-width: 768px) {
+            width: 300px;
+        }
+
+        @media (min-width: 1200px) {
+            width: 375px;
+            position: absolute;
+            left: 10px;
+            top: 5px;
+        }
+    }
+
     .btn {
-        font-weight: $font-weight-bolder;
         letter-spacing: 2px;
         font-size: 20px;
-
-        @media (min-width: 576px) {
-            top: 15px;
-        }
+        font-family: 'Fira Sans Condensed', sans-serif;
+        font-weight: 700;
     }
 
     .topnav {
@@ -110,9 +140,15 @@ body {
         a.nav-link {
             color: #FFF;
             padding: 1.5rem .75rem;
+            font-family: 'Fira Sans Condensed', sans-serif;
+            font-weight: 700;
+
+            @media (min-width: 768px){
+                color: $primary;
+            }
 
             &:hover {
-                color: $primary;
+                color: $navy;
             }
         }
         .dropdown-menu {
@@ -159,17 +195,20 @@ ul.navbar-nav {
 .mobile-menu-open,
 .scrolling {
     .top {
-        background-color: #FFF;
-        box-shadow: 0 0 .5rem rgba(0,0,0,.2);
-                
-        .topnav {
-            list-style: none;
-            display: flex;
 
-            li {
-                a.nav-link {
-                    color: #555;
-                    padding: .75rem .75rem;
+        @media (min-width: 768px){
+            background-color: #FFF;
+            box-shadow: 0 0 .5rem rgba(0,0,0,.2);
+                    
+            .topnav {
+                list-style: none;
+                display: flex;
+
+                li {
+                    a.nav-link {
+                        color: #555;
+                        padding: .75rem .75rem;
+                    }
                 }
             }
         }
@@ -281,20 +320,43 @@ main {
 // Main Slider
 .slider-container {
     position: relative;
-    height: 300px;
+    height: 400px;
     overflow: hidden;
     z-index: 0;
 
     @media (min-width: 576px){
-        height: 400px;
-    }
-
-    @media (min-width: 768px){
         height: 500px;
     }
 
+    @media (min-width: 768px){
+        height: 700px;
+    }
+
     @media (min-width: 992px){
-        height: 650px;
+        height: 970px;
+    }
+
+    .slider-text {
+        background: url('/themes/wordplate/assets/images/watercolor.png') center no-repeat;
+        background-size: contain;
+
+        p {
+            font-size: 20px;
+            color: #FFF;
+            text-shadow: 0 0 5px rgba(0,0,0,.4);
+
+            @media (min-width: 576px){
+                font-size: 40px;
+            }
+        
+            @media (min-width: 768px){
+                font-size: 60px;
+            }
+        
+            @media (min-width: 992px){
+                font-size: 80px;
+            }
+        }
     }
 }
 
