--- a/resources/assets/styles/fonts.scss
+++ b/resources/assets/styles/fonts.scss
@@ -1,2 +1,15 @@
 @import "~font-awesome/css/font-awesome.css";
 @import url('https://fonts.googleapis.com/css?family=ABeeZee|Cookie|Fira+Sans+Condensed:700');
+
+.fira {
+    font-family: 'Fira Sans Condensed', sans-serif;
+    font-weight: 700;
+}
+
+.abeezee {
+    font-family: 'ABeeZee', sans-serif;
+}
+
+.cookie {
+    font-family: 'Cookie', serif;
+}
