--- a/public/themes/wordplate/assets/styles/main.css
+++ b/public/themes/wordplate/assets/styles/main.css
@@ -2356,6 +2356,20 @@
   font-family: 'Cookie', serif;
 }
 
+article h1 {
+  font-family: "Cookie", serif;
+}
+
+article h2 {
+  font-family: "Fira Sans Condensed", sans-serif;
+}
+
+article h3,
+article h4,
+article h5 h6 {
+  font-family: "ABeeZee", sans-serif;
+}
+
 :root {
   --blue: #007bff;
   --indigo: #6610f2;
@@ -11995,16 +12009,17 @@ body #app .site-wrapper.full-height {
 .mobile-menu.open {
   display: block;
   width: 100%;
-  padding: 4rem 0 2rem;
   z-index: 5;
   background-color: rgba(255, 111, 116, 0.9);
-  padding: 10rem 2rem 2rem;
+  padding: 11rem 2rem 2rem;
   color: #FFF;
+  margin-bottom: -2rem;
 }
 
 .mobile-menu.open ul.navbar-nav li a {
-  font-size: 1.2em;
+  font-size: 1.4em;
   color: #FFF;
+  font-family: "Fira Sans Condensed", sans-serif;
 }
 
 .mobile-menu.open ul.navbar-nav li .dropdown-menu {
@@ -12014,7 +12029,7 @@ body #app .site-wrapper.full-height {
 }
 
 .mobile-menu.open ul.navbar-nav li .dropdown-menu a {
-  font-size: 1em;
+  font-size: 1.2em;
   color: #FFF;
 }
 
@@ -12034,6 +12049,8 @@ body #app .site-wrapper.full-height {
 
 .top .logo img {
   width: 250px;
+  transition: width .5s ease-out;
+  margin: 5px 10px 10px;
 }
 
 @media (min-width: 768px) {
@@ -12042,8 +12059,9 @@ body #app .site-wrapper.full-height {
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 1024px) {
   .top .logo img {
+    margin: 0;
     width: 375px;
     position: absolute;
     left: 10px;
@@ -12054,19 +12072,40 @@ body #app .site-wrapper.full-height {
 .top .btn {
   letter-spacing: 2px;
   font-size: 20px;
-  font-family: 'Fira Sans Condensed', sans-serif;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-weight: 700;
+  margin: 0 1rem;
 }
 
 .top .topnav {
   height: 100%;
+  padding: 0;
+}
+
+.top .topnav .container {
+  flex-direction: column-reverse;
+}
+
+@media (min-width: 768px) {
+  .top .topnav .container {
+    flex-direction: row;
+  }
+}
+
+@media (max-width: 767px) {
+  .top .topnav .container {
+    width: 100% !important;
+    margin: 0 !important;
+    max-width: none !important;
+  }
 }
 
 .top .topnav a.nav-link {
   color: #FFF;
-  padding: 1.5rem .75rem;
-  font-family: 'Fira Sans Condensed', sans-serif;
+  padding: .5rem 1rem;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-weight: 700;
+  font-size: 18px;
 }
 
 @media (min-width: 768px) {
@@ -12079,25 +12118,68 @@ body #app .site-wrapper.full-height {
   color: #224b68;
 }
 
+.top .topnav .nav-item.dropdown:hover {
+  background: #224b68;
+  border-radius: 5px 5px 0 0;
+}
+
+.top .topnav .nav-item.dropdown:hover a.nav-link {
+  color: #fff;
+}
+
 .top .topnav .dropdown-menu {
   border: 0;
-  border-top: 0.5rem solid #224b68;
-  margin-top: -1px;
-  border-radius: 0;
-  padding: 0;
-  background-color: #222222;
+  border-radius: 0 0 5px 5px;
+  padding: .5rem 0;
+  margin-top: -2px;
+  background-color: #224b68;
   width: 230px;
+  border-bottom: #ff6f74 5px solid;
 }
 
 .top .topnav .dropdown-menu a.dropdown-item {
   color: #FFF;
   background-color: transparent;
-  padding: 1rem;
+  padding: .5rem 1rem;
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-size: 18px;
 }
 
 .top .topnav .dropdown-menu a.dropdown-item:hover {
   color: #ff6f74;
-  background-color: #222222 !important;
+  background-color: #224b68 !important;
+}
+
+.top .topnav .mini-nav {
+  width: 100%;
+  justify-content: space-between;
+  background-color: #fff;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+  padding-top: .25rem;
+  height: 40px;
+}
+
+@media (min-width: 768px) {
+  .top .topnav .mini-nav {
+    justify-content: flex-end;
+    background-color: transparent;
+    box-shadow: none;
+  }
+}
+
+.top .topnav .mini-nav a.link {
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  color: #fa7a22;
+  margin: -4px 1rem 0;
+  line-height: 1em;
+}
+
+@media (max-width: 767px) {
+  .top .topnav .main-navigation {
+    width: 100%;
+  }
 }
 
 ul.navbar-nav {
@@ -12122,16 +12204,9 @@ ul.navbar-nav li a {
     box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.2);
   }
 
-  .mobile-menu-open .top .topnav,
-  .scrolling .top .topnav {
-    list-style: none;
-    display: flex;
-  }
-
-  .mobile-menu-open .top .topnav li a.nav-link,
-  .scrolling .top .topnav li a.nav-link {
-    color: #555;
-    padding: .75rem .75rem;
+  .mobile-menu-open .top .logo img,
+  .scrolling .top .logo img {
+    width: 309px;
   }
 }
 
@@ -12163,34 +12238,22 @@ main article header {
   margin-bottom: 1rem;
 }
 
-main article .fittext span,
-main article h1 {
-  color: #ff6f74;
-  text-transform: uppercase;
-  font-weight: 800;
-  letter-spacing: 2px;
-}
-
 main article p,
 main article ul,
 main article ol {
   line-height: 1.8em;
 }
 
-main article h2 {
-  margin-top: 3rem;
-  margin-bottom: 1rem;
+main article h1 {
   color: #224b68;
-  font-weight: 400;
-  text-transform: capitalize;
 }
 
-main article h2::after {
-  content: none;
-  background-color: #224b68;
+main article h2 {
+  color: #224b68;
 }
 
 .header-image {
+  background-color: #fff;
   background-size: cover;
   background-position: center;
   min-height: 150px;
@@ -12199,38 +12262,21 @@ main article h2::after {
   text-align: center;
 }
 
-.header-image h1,
-.header-image h2 {
-  display: inline-block;
-  padding: .75rem 1rem;
-  border: 1px solid #FFF;
-  height: 60px;
-  margin: 0;
-  line-height: 1em;
-  font-size: 2.3em;
-  text-shadow: 0 0 15px rgba(0, 0, 0, 0.4);
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
-  letter-spacing: 1px;
-}
-
 .header-image.support {
   padding: 3rem 1rem;
-  background-color: #222222;
   position: relative;
   overflow: hidden;
   z-index: 1;
 }
 
-.header-image.support::before {
+.header-image.support::after {
   content: " ";
   position: absolute;
-  display: block;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(255, 255, 255, 0.5);
   top: 0;
-  right: 0;
-  left: 0;
   bottom: 0;
-  z-index: 1;
+  left: 0;
+  right: 0;
 }
 
 .header-image.support .container {
@@ -12244,14 +12290,17 @@ main article h2::after {
 
 .slider-container {
   position: relative;
-  height: 400px;
+  height: 300px;
   overflow: hidden;
   z-index: 0;
+  margin-top: 2rem;
+  max-height: 100vh;
 }
 
 @media (min-width: 576px) {
   .slider-container {
-    height: 500px;
+    margin-top: 0;
+    height: 400px;
   }
 }
 
@@ -12267,20 +12316,35 @@ main article h2::after {
   }
 }
 
+.slider-container .slide-content {
+  padding: 6rem 0 0;
+}
+
+@media (min-width: 768px) {
+  .slider-container .slide-content {
+    padding: 0;
+  }
+}
+
 .slider-container .slider-text {
   background: url("/themes/wordplate/assets/images/watercolor.png") center no-repeat;
-  background-size: contain;
+  background-size: 100% 100%;
 }
 
 .slider-container .slider-text p {
-  font-size: 20px;
+  font-size: 37px;
   color: #FFF;
   text-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
+  width: 1000px;
+  max-width: 100%;
+  margin: auto;
+  line-height: 0.85em;
+  padding: 4rem 2rem;
 }
 
 @media (min-width: 576px) {
   .slider-container .slider-text p {
-    font-size: 40px;
+    font-size: 50px;
   }
 }
 
@@ -12448,6 +12512,23 @@ article h2::after,
 
 .team-grid .member-button .btn {
   background-color: #FFF;
+}
+
+.quick-search {
+  position: relative;
+  padding: 2rem 0;
+  background-color: rgba(78, 186, 203, 0.9);
+}
+
+@media (min-width: 768px) {
+  .quick-search {
+    margin-top: -100px;
+  }
+}
+
+.quick-search h2 {
+  font-family: "ABeeZee", sans-serif;
+  font-weight: 400;
 }
 
 .testimonials .testimonial {
