--- a/resources/assets/styles/fonts.scss
+++ b/resources/assets/styles/fonts.scss
@@ -13,3 +13,19 @@
 .cookie {
     font-family: 'Cookie', serif;
 }
+
+$fira: 'Fira Sans Condensed', sans-serif;
+$abeezee: 'ABeeZee', sans-serif;
+$cookie: 'Cookie', serif;
+
+article {
+    h1 {
+        font-family: $cookie;
+    }
+    h2 {
+        font-family: $fira
+    }
+    h3, h4, h5 h6 {
+        font-family: $abeezee
+    }
+}
