--- a/resources/assets/styles/fonts.scss
+++ b/resources/assets/styles/fonts.scss
@@ -1,4 +1,5 @@
 @import "~font-awesome/css/font-awesome.css";
+@import "~weathericons/sass/weather-icons";
 @import url('https://fonts.googleapis.com/css?family=ABeeZee|Cookie|Fira+Sans+Condensed:700');
 
 .fira {
