--- a/resources/assets/styles/variables.scss
+++ b/resources/assets/styles/variables.scss
@@ -82,6 +82,7 @@ $theme-colors: map-merge((
   "danger":     $danger,
   "light":      $light,
   "dark":       $dark,
+  "orange":     $orange,
   "white":      $white,
   "black":      $black
 ), $theme-colors);
