--- a/resources/assets/styles/fonts.scss
+++ b/resources/assets/styles/fonts.scss
@@ -1,6 +1,62 @@
 @import "~font-awesome/css/font-awesome.css";
 @import "~weathericons/sass/weather-icons";
-@import url('https://fonts.googleapis.com/css?family=ABeeZee|Cookie|Fira+Sans+Condensed:700');
+// @import url('https://fonts.googleapis.com/css?family=ABeeZee|Cookie|Fira+Sans+Condensed:700');
+
+/* abeezee-regular - latin */
+@font-face {
+    font-family: 'ABeeZee';
+    font-style: normal;
+    font-weight: 400;
+    src: url('/themes/wordplate/assets/fonts/abeezee-v11-latin-regular.eot'); /* IE9 Compat Modes */
+    src: local('ABeeZee Regular'), local('ABeeZee-Regular'),
+        url('/themes/wordplate/assets/fonts/abeezee-v11-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+        url('/themes/wordplate/assets/fonts/abeezee-v11-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+        url('/themes/wordplate/assets/fonts/abeezee-v11-latin-regular.woff') format('woff'), /* Modern Browsers */
+        url('/themes/wordplate/assets/fonts/abeezee-v11-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+        url('/themes/wordplate/assets/fonts/abeezee-v11-latin-regular.svg#ABeeZee') format('svg'); /* Legacy iOS */
+}
+
+/* abeezee-italic - latin */
+@font-face {
+font-family: 'ABeeZee';
+font-style: italic;
+font-weight: 400;
+src: url('/themes/wordplate/assets/fonts/abeezee-v11-latin-italic.eot'); /* IE9 Compat Modes */
+src: local('ABeeZee Italic'), local('ABeeZee-Italic'),
+        url('/themes/wordplate/assets/fonts/abeezee-v11-latin-italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+        url('/themes/wordplate/assets/fonts/abeezee-v11-latin-italic.woff2') format('woff2'), /* Super Modern Browsers */
+        url('/themes/wordplate/assets/fonts/abeezee-v11-latin-italic.woff') format('woff'), /* Modern Browsers */
+        url('/themes/wordplate/assets/fonts/abeezee-v11-latin-italic.ttf') format('truetype'), /* Safari, Android, iOS */
+        url('/themes/wordplate/assets/fonts/abeezee-v11-latin-italic.svg#ABeeZee') format('svg'); /* Legacy iOS */
+}
+
+/* fira-sans-condensed-600 - latin */
+@font-face {
+    font-family: 'Fira Sans Condensed';
+    font-style: normal;
+    font-weight: 600;
+    src: url('/themes/wordplate/assets/fonts/fira-sans-condensed-v2-latin-600.eot'); /* IE9 Compat Modes */
+    src: local('Fira Sans Condensed SemiBold'), local('FiraSansCondensed-SemiBold'),
+         url('/themes/wordplate/assets/fonts/fira-sans-condensed-v2-latin-600.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('/themes/wordplate/assets/fonts/fira-sans-condensed-v2-latin-600.woff2') format('woff2'), /* Super Modern Browsers */
+         url('/themes/wordplate/assets/fonts/fira-sans-condensed-v2-latin-600.woff') format('woff'), /* Modern Browsers */
+         url('/themes/wordplate/assets/fonts/fira-sans-condensed-v2-latin-600.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('/themes/wordplate/assets/fonts/fira-sans-condensed-v2-latin-600.svg#FiraSansCondensed') format('svg'); /* Legacy iOS */
+}
+
+/* cookie-regular - latin */
+@font-face {
+    font-family: 'Cookie';
+    font-style: normal;
+    font-weight: 400;
+    src: url('/themes/wordplate/assets/fonts/cookie-v8-latin-regular.eot'); /* IE9 Compat Modes */
+    src: local('Cookie-Regular'),
+         url('/themes/wordplate/assets/fonts/cookie-v8-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('/themes/wordplate/assets/fonts/cookie-v8-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+         url('/themes/wordplate/assets/fonts/cookie-v8-latin-regular.woff') format('woff'), /* Modern Browsers */
+         url('/themes/wordplate/assets/fonts/cookie-v8-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('/themes/wordplate/assets/fonts/cookie-v8-latin-regular.svg#Cookie') format('svg'); /* Legacy iOS */
+}
 
 .fira {
     font-family: 'Fira Sans Condensed', sans-serif;
