--- a/resources/assets/styles/theme.scss
+++ b/resources/assets/styles/theme.scss
@@ -576,22 +576,20 @@ main {
 
 // Footer
 footer {
-    color: #FFF;
+    color: $navy;
 
     a {
-        color: #FFF;
+        color: $navy;
 
         &:hover {
             text-decoration: underline;
-            color: #FFF;
+            color: $navy;
         }
     }
 
-    h4 {
-        margin: 1rem 0 0;
-        padding: 1rem 0;
-        text-transform: uppercase;
-        font-size: 14px;
+    h3 {
+        font-weight: normal;
+        font-size: 40px;
     }
 
     .footer-menu {
@@ -603,18 +601,11 @@ footer {
             margin: 1.25rem 0;
 
             a {
-                font-weight: 600;
+                font-family: $fira;
+                font-weight: 700;
                 font-size: 14px;
                 padding: 10px 0;
                 text-transform: uppercase;
-                display: inline-block;
-                border-bottom: 1px solid transparent;
-                transition: border-color .5s linear; 
-
-                &:hover {
-                    color: #FFF;
-                    border-color: rgba(255,255,255,.5);
-                }
             }
         }
     }
@@ -623,27 +614,15 @@ footer {
         padding: 1rem;
     }
 
-    .social-icons {
-        margin: 0 -.25rem;
-        
-        svg {
-
-            path: {
-                fill: transparent !important;
-                stroke: #FFF !important;
-                stroke-width: 2px;
-            }
-        }
+    .bot-bot {
+        background-color: #f3f0e8;
     }
+
     .copyright {
-        color: #FFF;
+        color: $dark;
         font-size: 12px;
         margin: 0;
         line-height: 1.5rem;
-    }
-
-    hr {
-        border-color: #555;
     }
 
     .siteby {
